modified:   backend-spring/src/main/java/com/example/backendspring/caixa/CaixaController.java 	modified:   backend-spring/src/main/java/com/example/backendspring/config/PostgresDiagnostic.java 	modified:   backend-spring/src/main/java/com/example/backendspring/sale/NotaController.java 	modified:   backend-spring/src/main/java/com/example/backendspring/sale/SaleController.java